--- a/contact/index.html
+++ b/contact/index.html
@@ -65,7 +65,7 @@ AUTHOR WEBSITE: https://themefisher.com
     <div class="row">
       <div class="col-12">
         <nav class="navbar navbar-expand-lg navbar-light p-0">
-          <a class="navbar-brand font-weight-bold mr-0" href="https://DataScienceProduct.com">
+          <a class="navbar-brand font-weight-bold mr-0" href="https://DataScienceProduct.com/">
 
 
 
@@ -112,7 +112,7 @@ AUTHOR WEBSITE: https://themefisher.com
 
 
 
-<img loading="prelaod" decoding="async" class="img-fluid" width="200" height="3040" src="/images/logo_hufc7c8673416b43f64c1070cc3e6b7b86_258592_200x0_resize_q95_h2_box_3.webp" alt="Data Science Product" onerror="this.onerror=null;this.src='\/images\/logo_hufc7c8673416b43f64c1070cc3e6b7b86_258592_200x0_resize_box_3.png'">
+<img loading="prelaod" decoding="async" class="img-fluid" width="200" height="200" src="/images/logo_hu73dfc57d1ba1019ce085af3c08ce9a86_23420_200x0_resize_q95_h2_box_3.webp" alt="Data Science Product" onerror="this.onerror=null;this.src='\/images\/logo_hu73dfc57d1ba1019ce085af3c08ce9a86_23420_200x0_resize_box_3.png'">
 
 
 
@@ -201,10 +201,7 @@ AUTHOR WEBSITE: https://themefisher.com
 
 
 
-
-
-
-        <li class="list-inline-item">/ &nbsp; <a href="https://DataScienceProduct.comcontact">Contact</a></li>
+        <li class="list-inline-item">/ &nbsp; <a href="https://DataScienceProduct.com/contact">Contact</a></li>
 
 
 
@@ -226,10 +223,10 @@ AUTHOR WEBSITE: https://themefisher.com
         <form action="https://formspree.io/f/meqnaggk" method="post">
           <div class="mb-4">
             <label for="name" class="form-label">Name</label>
-            <input type="text" class="form-control" id="name" placeholder="Alex Smith" required>
+            <input type="text" class="form-control" id="name" placeholder="name" required>
           </div>
           <div class="mb-4">
-            <label for="email" class="form-label">Email address</label>
+            <label for="email" class="form-label">Email</label>
             <input type="email" class="form-control" id="email" placeholder="hello@datascienceproduct.com" required>
           </div>
           <div class="mb-4">
@@ -238,7 +235,7 @@ AUTHOR WEBSITE: https://themefisher.com
           </div>
           <div class="mb-4">
             <label for="message" class="form-label">Message</label>
-            <textarea class="form-control" id="message" rows="4" placeholder="Your message here" required></textarea>
+            <textarea class="form-control" id="message" rows="4" placeholder="Your message" required></textarea>
           </div>
 
           <button type="submit" class="btn btn-primary" aria-label="Send Message">Send message</button>
