Updated article what is data science product management

--- a/contact/index.html
+++ b/contact/index.html
@@ -250,7 +250,7 @@ if (!doNotTrack) {
         <form action="https://formspree.io/f/meqnaggk" method="post">
           <div class="mb-4">
             <label for="name" class="form-label">Name</label>
-            <input type="text" class="form-control" id="name" placeholder="name" required>
+            <input type="text" class="form-control" id="name" placeholder="Name" required>
           </div>
           <div class="mb-4">
             <label for="email" class="form-label">Email</label>
